--- a/HeartSync/package.json
+++ b/HeartSync/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@faker-js/faker": "^9.9.0",
+    "@react-navigation/stack": "^7.6.2",
     "expo": "~54.0.22",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-deck-swiper": "^1.1.7",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-swipe-cards": "^0.1.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
