--- a/HeartSync/package.json
+++ b/HeartSync/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@faker-js/faker": "^9.9.0",
     "@react-navigation/stack": "^7.6.2",
-    "expo": "~54.0.22",
+    "expo": "^54.0.23",
     "expo-constants": "~18.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
@@ -24,6 +24,7 @@
     "react-native-deck-swiper": "^1.1.7",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
