--- a/HeartSync/package.json
+++ b/HeartSync/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@faker-js/faker": "^9.9.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/stack": "^7.6.2",
     "expo": "^54.0.23",
     "expo-constants": "~18.0.10",
